plugins now link to the variable space of the main application; no more need to compile ephys lib

--- a/Source/Processors/ArduinoOutput/Makefile
+++ b/Source/Processors/ArduinoOutput/Makefile
@@ -10,9 +10,9 @@ LIBDIR := build
 OBJDIR := build/intermediate/Debug
 OUTDIR := build
 CPPFLAGS := $(DEPFLAGS) -D "LINUX=1" -D "DEBUG=1" -D "_DEBUG=1" -D "JUCER_LINUX_MAKE_7346DA2A=1" -I /usr/include -I /usr/include/freetype2 -I ../../../JuceLibraryCode
-CFLAGS += $(CPPFLAGS) $(TARGET_ARCH) -g -ggdb -fPIC -O0 
+CFLAGS += $(CPPFLAGS) $(TARGET_ARCH) -g -ggdb -O0 -fPIC
 CXXFLAGS += $(CFLAGS) 
-LDFLAGS += -L$(BINDIR) -L$(LIBDIR) -shared -L/usr/X11R6/lib/ -lX11 -lXext -lXinerama -lasound -ldl -lfreetype -lpthread -lrt -lephys 
+LDFLAGS += -L$(BINDIR) -L$(LIBDIR) -shared -L/usr/X11R6/lib/ -lX11 -lXext -lXinerama -lasound -ldl -lfreetype -lpthread -lrt
 LDDEPS :=
 RESFLAGS :=  -D "LINUX=1" -D "DEBUG=1" -D "_DEBUG=1" -D "JUCER_LINUX_MAKE_7346DA2A=1" -I /usr/include -I /usr/include/freetype2 -I ../../../JuceLibraryCode
 TARGET := ArduinoOutput.so
