--- a/.gitignore
+++ b/.gitignore
@@ -76,6 +76,10 @@ Builds/VisualStudio2010/open-ephys.vcxproj.user
 Builds/VisualStudio2010/windowState.xml
 Builds/VisualStudio2010/pipetest.bit
 
+Builds/VisualStudio2013/Plugins/*/*.user
+Builds/VisualStudio2013/Plugins/*/x64
+Builds/VisualStudio2013/Plugins/*/Debug
+
 # 5. Miscellanous generated files (Doxygen, etc.)
 Source/Docs/*
 
